--- a/E-commerce-ASP/Views/Account/Register.cshtml
+++ b/E-commerce-ASP/Views/Account/Register.cshtml
@@ -38,11 +38,11 @@
                                 <div class="col-md-6">
                                     <div>
                                         @Html.RadioButtonFor(model => model.Nature, "Particular", new { @class = "form-check-input" })
-                                        @Html.Label("Particular", new { @class = "form-check-label pl-2" })
+                                        @Html.Label(E_commerce_ASP.Resources.Models.AccountViewModels.Particular, new { @class = "form-check-label pl-2" })
                                     </div>
                                     <div>
                                         @Html.RadioButtonFor(model => model.Nature, "Company", new { @class = "form-check-input" })
-                                        @Html.Label("Company", new { @class = "form-check-label pl-2" })
+                                        @Html.Label(E_commerce_ASP.Resources.Models.AccountViewModels.Company, new { @class = "form-check-label pl-2" })
                                     </div>
                                 </div>
                             </div>
