--- a/E-commerce-ASP/Views/Account/CompanyParameters.cshtml
+++ b/E-commerce-ASP/Views/Account/CompanyParameters.cshtml
@@ -25,36 +25,36 @@
                             @Html.ValidationSummary("", new { @class = "text-danger" })
 
                             <div class="form-group">
-                                @Html.LabelFor(m => m.CompanyName, new { @class = "col-md-3 control-label" })
-                                <div class="col-md-10">
+                                @Html.LabelFor(m => m.CompanyName, new { @class = "col-md-6 control-label" })
+                                <div class="col-md-9">
                                     @Html.TextBoxFor(m => m.CompanyName, new { @class = "form-control" })
                                 </div>
                             </div>
 
                             <div class="form-group">
-                                @Html.LabelFor(m => m.WebSite, new { @class = "col-md-2 control-label" })
-                                <div class="col-md-10">
+                                @Html.LabelFor(m => m.WebSite, new { @class = "col-md-6 control-label" })
+                                <div class="col-md-9">
                                     @Html.TextBoxFor(m => m.WebSite, new { @class = "form-control" })
                                 </div>
                             </div>
 
                             <div class="form-group">
-                                @Html.LabelFor(m => m.NumPatente, new { @class = "col-md-3 control-label" })
-                                <div class="col-md-10">
+                                @Html.LabelFor(m => m.NumPatente, new { @class = "col-md-6 control-label" })
+                                <div class="col-md-9">
                                     @Html.TextBoxFor(m => m.NumPatente, new { @class = "form-control" })
                                 </div>
                             </div>
 
                             <div class="form-group">
-                                @Html.LabelFor(m => m.PhoneNumber, new { @class = "col-md-3 control-label" })
-                                <div class="col-md-10">
+                                @Html.LabelFor(m => m.PhoneNumber, new { @class = "col-md-6 control-label" })
+                                <div class="col-md-9">
                                     @Html.TextBoxFor(m => m.PhoneNumber, new { @class = "form-control" })
                                 </div>
                             </div>
 
                             <div class="form-group">
-                                @Html.LabelFor(m => m.Address, new { @class = "col-md-2 control-label" })
-                                <div class="col-md-10">
+                                @Html.LabelFor(m => m.Address, new { @class = "col-md-6 control-label" })
+                                <div class="col-md-9">
                                     @Html.TextBoxFor(m => m.Address, new { @class = "form-control" })
                                 </div>
                             </div>
@@ -62,7 +62,7 @@
 
                             <div class="form-group">
                                 <div class="col-md-offset-2 col-md-10">
-                                    <input type="submit" class="btn btn-default" value="@E_commerce_ASP.Resources.Views.Account.Account.Register" />
+                                    <button type="submit" class="btn btn-dark">@E_commerce_ASP.Resources.Views.Account.Account.Register</button>
                                 </div>
                             </div>
                         }
