--- a/E-commerce-ASP/Views/Proprietaire/Index.cshtml
+++ b/E-commerce-ASP/Views/Proprietaire/Index.cshtml
@@ -6,6 +6,10 @@
 
 }
 
+@{
+    E_commerce_ASP.Models.ApplicationDbContext db = new E_commerce_ASP.Models.ApplicationDbContext();
+}
+
 <div class="shopping-cart section">
     <div class="container">
         <div class="row">
@@ -23,12 +27,12 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td class="product-des product-name font-weight-bold" data-title="FULL NAME">
+                                <td class="product-des product-name font-weight-bold text-center" data-title="FULL NAME">
                                     @Model.FullName
                                 </td>
-                                <td class="font-weight-bold" data-title="EMAIL">@Model.Email</td>
-                                <td class="font-weight-bold" data-title="PHONE NUMBER">@Model.PhoneNumber</td>
-                                <td class="font-weight-bold" data-title="ADDRESS">@Model.Address</td>
+                                <td class="font-weight-bold text-center" data-title="EMAIL">@Model.Email</td>
+                                <td class="font-weight-bold text-center" data-title="PHONE NUMBER">@Model.PhoneNumber</td>
+                                <td class="font-weight-bold text-center" data-title="ADDRESS">@Model.Address</td>
                             </tr>
                         </tbody>
                     </table>
@@ -69,12 +73,87 @@
             }
 
         </div>
-        @if (Request.IsAuthenticated && Model.RealId==ViewBag.authenticatedUserId)
+        @if (Request.IsAuthenticated && Model.RealId == ViewBag.authenticatedUserId)
         {
-            <div class="mt-5">
+            <div class="mt-3">
                 @Html.ActionLink(@E_commerce_ASP.Resources.Views.Proprietaire.Proprieataire.Settings, "Settings", "Proprietaire", new { Id = Model.RealId }, new { @class = "btn btn-warning" })
             </div>
+
+            <div class="container-fluid px-4">
+                <h1 class="mt-4">@E_commerce_ASP.Resources.Views.Proprietaire.Proprieataire.LogsOfYourProducts</h1>
+
+                <div class="card mb-4">
+
+                </div>
+                <div class="card mb-4">
+                    <div class="card-header">
+                        <i class="fa fa-table me-1"></i>
+                        @E_commerce_ASP.Resources.Views.Proprietaire.Proprieataire.Logs
+                    </div>
+                    <div class="card-body">
+                        <table id="datatablesSimple">
+                            <thead>
+                                <tr>
+                                    <th>@E_commerce_ASP.Resources.Views.Proprietaire.Proprieataire.ProductId</th>
+                                    <th>@E_commerce_ASP.Resources.Views.Proprietaire.Proprieataire.ProductName</th>
+                                    <th>@E_commerce_ASP.Resources.Views.Proprietaire.Proprieataire.Owner</th>
+                                    <th>@E_commerce_ASP.Resources.Views.Proprietaire.Proprieataire.Date</th>
+                                    <th>@E_commerce_ASP.Resources.Views.Proprietaire.Proprieataire.Modificiation</th>
+                                </tr>
+                            </thead>
+                            <tfoot>
+                                <tr>
+                                    <th>@E_commerce_ASP.Resources.Views.Proprietaire.Proprieataire.ProductId</th>
+                                    <th>@E_commerce_ASP.Resources.Views.Proprietaire.Proprieataire.ProductName</th>
+                                    <th>@E_commerce_ASP.Resources.Views.Proprietaire.Proprieataire.Owner</th>
+                                    <th>@E_commerce_ASP.Resources.Views.Proprietaire.Proprieataire.Date</th>
+                                    <th>@E_commerce_ASP.Resources.Views.Proprietaire.Proprieataire.Modificiation</th>
+                                </tr>
+                            </tfoot>
+                            <tbody>
+
+                                @foreach (var item in ViewBag.historiques)
+                                {
+
+                                    <tr>
+                                        <td>@item.ProductId</td>
+
+                                        <td>@item.Pname</td>
+
+
+                                        @if (Model.Nature.Equals("Particular"))
+                                        {
+                                            <td>@Model.FirstName @Model.LastName</td>
+                                        }
+                                        else
+                                        {
+                                            <td>@Model.CompanyName</td>
+                                        }
+
+                                        <td>@item.Date.ToString()</td>
+                                        <td>@item.Transaction</td>
+                                    </tr>
+
+                                }
+
+
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+            @Scripts.Render("~/Content/js/scripts.js")
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
+            @Scripts.Render("~/Content/assets/demo/chart-area-demo.js")
+            @Scripts.Render("~/Content/assets/demo/chart-bar-demo.js")
+            <script src="https://cdn.jsdelivr.net/npm/simple-datatables@latest" crossorigin="anonymous"></script>
+            @Scripts.Render("~/Content/js/datatables-simple-demo.js")
+            <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet" />
+            @Styles.Render("~/Content/styles/styles.css")
         }
 
     </div>
 </div>
+
