--- a/E-commerce-ASP/Views/Home/LiveSearch.cshtml
+++ b/E-commerce-ASP/Views/Home/LiveSearch.cshtml
@@ -8,6 +8,7 @@
         padding: 3px;
         background-color: #d9edf7;
         border-radius: 3px;
+        white-space: nowrap;
     }
 
     .search-tag {
