--- a/E-commerce-ASP/Views/Home/Search.cshtml
+++ b/E-commerce-ASP/Views/Home/Search.cshtml
@@ -137,53 +137,68 @@
     </style>
     <br />
     <br />
-    <div class="mb-5 d-flex justify-content-center">
-        <h1 class="font-weight-bold">Your search results</h1>
-    </div>
-    <div class="d-flex justify-content-center">
-        @foreach (var item in Model)
-        {
+    @if (Model.Count() != 0)
+    {
+        <div class="mb-5 d-flex justify-content-center">
+            <h1 class="font-weight-bold">@E_commerce_ASP.Resources.Views.Home.Search.results</h1>
+        </div>
+        <div class="d-flex justify-content-center">
+            @foreach (var item in Model)
+            {
 
-            <div class="col-lg-4 col-md-6 col-sm-6 col-12">
+                <div class="col-lg-4 col-md-6 col-sm-6 col-12">
 
-                <div class="card card-price" style="border-radius: 50px">
-                    <div class="card-img">
-                        <a href="/Product/Index/@item.Id">
-                            <img src="~/Uploads/@item.Image" class="img-responsive" style="width:360px;height:220px">
-                            <div class="card-caption">
+                    <div class="card card-price" style="border-radius: 50px">
+                        <div class="card-img">
+                            <a href="/Product/Index/@item.Id">
+                                <img src="~/Uploads/@item.Image" class="img-responsive" style="width:360px;height:220px">
+                                <div class="card-caption">
 
-                            </div>
-                        </a>
-                    </div>
-                    <div class="card-body">
-                        <div class="lead text-center" style="color:rgba(0,0,0); font-weight:bold;">@item.Name</div>
-                        <div class="titre">@item.Description</div>
-                        <table class="table">
+                                </div>
+                            </a>
+                        </div>
+                        <div class="card-body">
+                            <div class="lead text-center" style="color:rgba(0,0,0); font-weight:bold;">@item.Name</div>
+                            <div class="titre">@item.Description</div>
+                            <table class="table">
 
-                            <tr><td style="font-weight: bold;">@E_commerce_ASP.Resources.Views.Home.Index.Price</td><td class="price">@item.Price Dhs</td></tr>
-                            <tr>
-                                <td style="font-weight: bold;">@E_commerce_ASP.Resources.Views.Home.Index.Category</td>
-                                <td class="price">
-                                    @{
-                                        E_commerce_ASP.Models.Category categoryName = db.Categories.Where(c => c.Id == item.CategoryId).First();
-                                    }
-                                    @categoryName.Name
-                                </td>
-                            </tr>
-
-
-
-                        </table>
-
-                        <div class="detailText">@Html.ActionLink(E_commerce_ASP.Resources.Views.Home.Index.WatchDetails, "Index", "Product", new { Id = item.Id }, null)</div>
+                                <tr><td style="font-weight: bold;">@E_commerce_ASP.Resources.Views.Home.Index.Price</td><td class="price">@item.Price Dhs</td></tr>
+                                <tr>
+                                    <td style="font-weight: bold;">@E_commerce_ASP.Resources.Views.Home.Index.Category</td>
+                                    <td class="price">
+                                        @{
+                                            E_commerce_ASP.Models.Category categoryName = db.Categories.Where(c => c.Id == item.CategoryId).First();
+                                        }
+                                        @categoryName.Name
+                                    </td>
+                                </tr>
 
 
+
+                            </table>
+
+                            <div class="detailText">@Html.ActionLink(E_commerce_ASP.Resources.Views.Home.Index.WatchDetails, "Index", "Product", new { Id = item.Id }, null)</div>
+
+
+                        </div>
                     </div>
                 </div>
-            </div>
 
-        }
-    </div>
+            }
+        </div>
+
+    }
+    else
+    {
+        <div class="mb-5 d-flex align-items-center flex-column">
+            <img src="~/Uploads/jumia.svg">
+            <p></p>
+            <h2>@E_commerce_ASP.Resources.Views.Home.Search.noItem</h2>
+            <a class="btn btn-primary mt-4 text-white" href="/">@E_commerce_ASP.Resources.Views.Home.Search.home</a>
+        </div>
+
+    }
+
 
 
 </div>
