--- a/E-commerce-ASP/Views/Proprietaire/Index.cshtml
+++ b/E-commerce-ASP/Views/Proprietaire/Index.cshtml
@@ -76,7 +76,7 @@
         @if (Request.IsAuthenticated && Model.RealId == ViewBag.authenticatedUserId)
         {
             <div class="mt-3">
-                @Html.ActionLink(@E_commerce_ASP.Resources.Views.Proprietaire.Proprieataire.Settings, "Settings", "Proprietaire", new { Id = Model.RealId }, new { @class = "btn btn-warning" })
+                @Html.ActionLink(@E_commerce_ASP.Resources.Views.Proprietaire.Proprieataire.Settings, "Settings", "Proprietaire", new { Id = Model.RealId }, new { @class = "btn btn-warning font-weight-bold" })
             </div>
 
             <div class="container-fluid px-4">
