fixed some admin views

--- a/E-commerce-ASP/Views/Admin/ListeFavoris.cshtml
+++ b/E-commerce-ASP/Views/Admin/ListeFavoris.cshtml
@@ -13,7 +13,7 @@
 
 <main>
     <div class="container-fluid px-4">
-        <h1 class="mt-4">Main DashBoard</h1>
+        <h1 class="mt-4">@E_commerce_ASP.Resources.Views.Admin.Admin.FavouriteList</h1>
         <ol class="breadcrumb mb-4">
             <li class="breadcrumb-item active">@E_commerce_ASP.Resources.Views.Admin.Admin.Shortcuts</li>
         </ol>
