--- a/E-commerce-ASP/Views/Product/Index.cshtml
+++ b/E-commerce-ASP/Views/Product/Index.cshtml
@@ -102,7 +102,7 @@
 
             <div class="card action_table col-lg-3 col-md-3 col-12 mx-auto align-items-center">
                 <div class="mb-5">
-                    @Html.ActionLink(@E_commerce_ASP.Resources.Views.Product.Product.EditProduct, "EditProduct", "Product", new { Id = Model.Id }, new { @class = "btn btn-success" })
+                    @Html.ActionLink(@E_commerce_ASP.Resources.Views.Product.Product.EditProduct, "EditProduct", "Product", new { Id = Model.Id }, new { @class = "btn btn-success text-white" })
 
                 </div>
                 <div>
