--- a/E-commerce-ASP/Views/Proprietaire/MyProducts.cshtml
+++ b/E-commerce-ASP/Views/Proprietaire/MyProducts.cshtml
@@ -158,7 +158,7 @@
                 </div>
                 <div class="card-body">
                     <div class="lead text-center" style="color:rgba(0,0,0); font-weight:bold;">@item.Name</div>
-                    <div>@item.Description</div>
+                   @* <div>@item.Description</div> *@
                     <table class="table">
 
                         <tr><td style="font-weight: bold;">@E_commerce_ASP.Resources.Views.Proprietaire.Proprieataire.Price</td><td class="price">@item.Price Dhs</td></tr>
